src/Ast/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Ast/Par.y
-----------------------------------------------------------------------------

state 119 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pAst -> Ast                                 (0)
	%start_pListDecl -> ListDecl                       (1)
	%start_pListExpr -> ListExpr                       (2)
	%start_pListIdent -> ListIdent                     (3)
	%start_pRoutineDecl -> RoutineDecl                 (4)
	%start_pDecl -> Decl                               (5)
	%start_pStatement -> Statement                     (6)
	%start_pExpr6 -> Expr6                             (7)
	%start_pExpr5 -> Expr5                             (8)
	%start_pExpr4 -> Expr4                             (9)
	%start_pExpr3 -> Expr3                             (10)
	%start_pExpr2 -> Expr2                             (11)
	%start_pExpr1 -> Expr1                             (12)
	%start_pExpr -> Expr                               (13)
	Ident -> L_Ident                                   (14)
	Integer -> L_integ                                 (15)
	Ast -> ListDecl                                    (16)
	ListDecl ->                                        (17)
	ListDecl -> Decl                                   (18)
	ListDecl -> Decl ';' ListDecl                      (19)
	ListExpr ->                                        (20)
	ListExpr -> Expr                                   (21)
	ListExpr -> Expr ',' ListExpr                      (22)
	ListIdent ->                                       (23)
	ListIdent -> Ident                                 (24)
	ListIdent -> Ident ',' ListIdent                   (25)
	RoutineDecl -> 'def' Ident '(' ListIdent ')' ':' '{' ListDecl '}'   (26)
	Decl -> 'return' Expr                              (27)
	Decl -> Statement                                  (28)
	Decl -> RoutineDecl                                (29)
	Statement -> Ident '=' Expr                        (30)
	Statement -> Ident '(' ListExpr ')'                (31)
	Statement -> 'while' '(' Expr ')' ':' '{' ListDecl '}'   (32)
	Statement -> 'for' Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'   (33)
	Statement -> 'if' Expr ':' '{' ListDecl '}'        (34)
	Statement -> 'if' Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'   (35)
	Expr6 -> Integer                                   (36)
	Expr6 -> Ident                                     (37)
	Expr6 -> Ident '(' ListExpr ')'                    (38)
	Expr5 -> '-' Expr6                                 (39)
	Expr5 -> Expr6                                     (40)
	Expr5 -> '(' Expr ')'                              (41)
	Expr4 -> 'not' Expr5                               (42)
	Expr4 -> Expr5                                     (43)
	Expr3 -> Expr3 '*' Expr4                           (44)
	Expr3 -> Expr3 '/' Expr4                           (45)
	Expr3 -> Expr3 '%' Expr4                           (46)
	Expr3 -> Expr4                                     (47)
	Expr2 -> Expr2 '+' Expr3                           (48)
	Expr2 -> Expr2 '-' Expr3                           (49)
	Expr2 -> Expr3                                     (50)
	Expr1 -> Expr1 'and' Expr2                         (51)
	Expr1 -> Expr1 'or' Expr2                          (52)
	Expr1 -> Expr1 'xor' Expr2                         (53)
	Expr1 -> Expr2                                     (54)
	Expr -> Expr '<' Expr1                             (55)
	Expr -> Expr '>' Expr1                             (56)
	Expr -> Expr '<=' Expr1                            (57)
	Expr -> Expr '>=' Expr1                            (58)
	Expr -> Expr '==' Expr1                            (59)
	Expr -> Expr '!=' Expr1                            (60)
	Expr -> Expr1                                      (61)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	':'            { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'<'            { PT _ (TS _ 12) }
	'<='           { PT _ (TS _ 13) }
	'='            { PT _ (TS _ 14) }
	'=='           { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'and'          { PT _ (TS _ 18) }
	'def'          { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'for'          { PT _ (TS _ 21) }
	'if'           { PT _ (TS _ 22) }
	'in'           { PT _ (TS _ 23) }
	'not'          { PT _ (TS _ 24) }
	'or'           { PT _ (TS _ 25) }
	'range'        { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'while'        { PT _ (TS _ 28) }
	'xor'          { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'}'            { PT _ (TS _ 31) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pAst     rule  0
	%start_pListDecl rule  1
	%start_pListExpr rule  2
	%start_pListIdent rule  3
	%start_pRoutineDecl rule  4
	%start_pDecl    rule  5
	%start_pStatement rule  6
	%start_pExpr6   rule  7
	%start_pExpr5   rule  8
	%start_pExpr4   rule  9
	%start_pExpr3   rule  10
	%start_pExpr2   rule  11
	%start_pExpr1   rule  12
	%start_pExpr    rule  13
	Ident           rule  14
	Integer         rule  15
	Ast             rule  16
	ListDecl        rules 17, 18, 19
	ListExpr        rules 20, 21, 22
	ListIdent       rules 23, 24, 25
	RoutineDecl     rule  26
	Decl            rules 27, 28, 29
	Statement       rules 30, 31, 32, 33, 34, 35
	Expr6           rules 36, 37, 38
	Expr5           rules 39, 40, 41
	Expr4           rules 42, 43
	Expr3           rules 44, 45, 46, 47
	Expr2           rules 48, 49, 50
	Expr1           rules 51, 52, 53, 54
	Expr            rules 55, 56, 57, 58, 59, 60, 61

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pAst -> . Ast                                (rule 0)

	'def'          shift, and enter state 43
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 44
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 17

	Ident          goto state 35
	Ast            goto state 52
	ListDecl       goto state 53
	RoutineDecl    goto state 40
	Decl           goto state 51
	Statement      goto state 42

State 1

	%start_pListDecl -> . ListDecl                      (rule 1)

	'def'          shift, and enter state 43
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 44
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15
	%eof           reduce using rule 17

	Ident          goto state 35
	ListDecl       goto state 50
	RoutineDecl    goto state 40
	Decl           goto state 51
	Statement      goto state 42

State 2

	%start_pListExpr -> . ListExpr                      (rule 2)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28
	%eof           reduce using rule 20

	Ident          goto state 16
	Integer        goto state 17
	ListExpr       goto state 48
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 49

State 3

	%start_pListIdent -> . ListIdent                    (rule 3)

	L_Ident        shift, and enter state 15
	%eof           reduce using rule 23

	Ident          goto state 46
	ListIdent      goto state 47

State 4

	%start_pRoutineDecl -> . RoutineDecl                (rule 4)

	'def'          shift, and enter state 43

	RoutineDecl    goto state 45

State 5

	%start_pDecl -> . Decl                              (rule 5)

	'def'          shift, and enter state 43
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'return'       shift, and enter state 44
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15

	Ident          goto state 35
	RoutineDecl    goto state 40
	Decl           goto state 41
	Statement      goto state 42

State 6

	%start_pStatement -> . Statement                    (rule 6)

	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'while'        shift, and enter state 39
	L_Ident        shift, and enter state 15

	Ident          goto state 35
	Statement      goto state 36

State 7

	%start_pExpr6 -> . Expr6                            (rule 7)

	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 34

State 8

	%start_pExpr5 -> . Expr5                            (rule 8)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 33

State 9

	%start_pExpr4 -> . Expr4                            (rule 9)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 32

State 10

	%start_pExpr3 -> . Expr3                            (rule 10)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 31

State 11

	%start_pExpr2 -> . Expr2                            (rule 11)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 30

State 12

	%start_pExpr1 -> . Expr1                            (rule 12)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 29

State 13

	%start_pExpr -> . Expr                              (rule 13)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 14

	Ident -> . L_Ident                                  (rule 14)

	L_Ident        shift, and enter state 15


State 15

	Ident -> L_Ident .                                  (rule 14)

	'!='           reduce using rule 14
	'%'            reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	','            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	':'            reduce using rule 14
	';'            reduce using rule 14
	'<'            reduce using rule 14
	'<='           reduce using rule 14
	'='            reduce using rule 14
	'=='           reduce using rule 14
	'>'            reduce using rule 14
	'>='           reduce using rule 14
	'and'          reduce using rule 14
	'in'           reduce using rule 14
	'or'           reduce using rule 14
	'xor'          reduce using rule 14
	'}'            reduce using rule 14
	%eof           reduce using rule 14


State 16

	Expr6 -> Ident .                                    (rule 37)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 38)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'('            shift, and enter state 81
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	':'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'and'          reduce using rule 37
	'or'           reduce using rule 37
	'xor'          reduce using rule 37
	'}'            reduce using rule 37
	%eof           reduce using rule 37


State 17

	Expr6 -> Integer .                                  (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	':'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'and'          reduce using rule 36
	'or'           reduce using rule 36
	'xor'          reduce using rule 36
	'}'            reduce using rule 36
	%eof           reduce using rule 36


State 18

	Expr5 -> Expr6 .                                    (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	':'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'and'          reduce using rule 40
	'or'           reduce using rule 40
	'xor'          reduce using rule 40
	'}'            reduce using rule 40
	%eof           reduce using rule 40


State 19

	Expr4 -> Expr5 .                                    (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	':'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'and'          reduce using rule 43
	'or'           reduce using rule 43
	'xor'          reduce using rule 43
	'}'            reduce using rule 43
	%eof           reduce using rule 43


State 20

	Expr3 -> Expr4 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	':'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'and'          reduce using rule 47
	'or'           reduce using rule 47
	'xor'          reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47


State 21

	Expr3 -> Expr3 . '*' Expr4                          (rule 44)
	Expr3 -> Expr3 . '/' Expr4                          (rule 45)
	Expr3 -> Expr3 . '%' Expr4                          (rule 46)
	Expr2 -> Expr3 .                                    (rule 50)

	'!='           reduce using rule 50
	'%'            shift, and enter state 70
	')'            reduce using rule 50
	'*'            shift, and enter state 71
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            shift, and enter state 72
	':'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'and'          reduce using rule 50
	'or'           reduce using rule 50
	'xor'          reduce using rule 50
	'}'            reduce using rule 50
	%eof           reduce using rule 50


State 22

	Expr2 -> Expr2 . '+' Expr3                          (rule 48)
	Expr2 -> Expr2 . '-' Expr3                          (rule 49)
	Expr1 -> Expr2 .                                    (rule 54)

	'!='           reduce using rule 54
	')'            reduce using rule 54
	'+'            shift, and enter state 73
	','            reduce using rule 54
	'-'            shift, and enter state 74
	':'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'and'          reduce using rule 54
	'or'           reduce using rule 54
	'xor'          reduce using rule 54
	'}'            reduce using rule 54
	%eof           reduce using rule 54


State 23

	Expr1 -> Expr1 . 'and' Expr2                        (rule 51)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 52)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 53)
	Expr -> Expr1 .                                     (rule 61)

	'!='           reduce using rule 61
	')'            reduce using rule 61
	','            reduce using rule 61
	':'            reduce using rule 61
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	'and'          shift, and enter state 75
	'or'           shift, and enter state 76
	'xor'          shift, and enter state 77
	'}'            reduce using rule 61
	%eof           reduce using rule 61


State 24

	%start_pExpr -> Expr .                              (rule 13)
	Expr -> Expr . '<' Expr1                            (rule 55)
	Expr -> Expr . '>' Expr1                            (rule 56)
	Expr -> Expr . '<=' Expr1                           (rule 57)
	Expr -> Expr . '>=' Expr1                           (rule 58)
	Expr -> Expr . '==' Expr1                           (rule 59)
	Expr -> Expr . '!=' Expr1                           (rule 60)

	'!='           shift, and enter state 55
	'<'            shift, and enter state 57
	'<='           shift, and enter state 58
	'=='           shift, and enter state 59
	'>'            shift, and enter state 60
	'>='           shift, and enter state 61
	%eof           accept


State 25

	Expr5 -> '(' . Expr ')'                             (rule 41)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 80

State 26

	Expr5 -> '-' . Expr6                                (rule 39)

	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 79

State 27

	Expr4 -> 'not' . Expr5                              (rule 42)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 78

State 28

	Integer -> L_integ .                                (rule 15)

	'!='           reduce using rule 15
	'%'            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	','            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	':'            reduce using rule 15
	';'            reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'=='           reduce using rule 15
	'>'            reduce using rule 15
	'>='           reduce using rule 15
	'and'          reduce using rule 15
	'or'           reduce using rule 15
	'xor'          reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 29

	%start_pExpr1 -> Expr1 .                            (rule 12)
	Expr1 -> Expr1 . 'and' Expr2                        (rule 51)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 52)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 53)

	'and'          shift, and enter state 75
	'or'           shift, and enter state 76
	'xor'          shift, and enter state 77
	%eof           accept


State 30

	%start_pExpr2 -> Expr2 .                            (rule 11)
	Expr2 -> Expr2 . '+' Expr3                          (rule 48)
	Expr2 -> Expr2 . '-' Expr3                          (rule 49)

	'+'            shift, and enter state 73
	'-'            shift, and enter state 74
	%eof           accept


State 31

	%start_pExpr3 -> Expr3 .                            (rule 10)
	Expr3 -> Expr3 . '*' Expr4                          (rule 44)
	Expr3 -> Expr3 . '/' Expr4                          (rule 45)
	Expr3 -> Expr3 . '%' Expr4                          (rule 46)

	'%'            shift, and enter state 70
	'*'            shift, and enter state 71
	'/'            shift, and enter state 72
	%eof           accept


State 32

	%start_pExpr4 -> Expr4 .                            (rule 9)

	%eof           accept


State 33

	%start_pExpr5 -> Expr5 .                            (rule 8)

	%eof           accept


State 34

	%start_pExpr6 -> Expr6 .                            (rule 7)

	%eof           accept


State 35

	Statement -> Ident . '=' Expr                       (rule 30)
	Statement -> Ident . '(' ListExpr ')'               (rule 31)

	'('            shift, and enter state 68
	'='            shift, and enter state 69


State 36

	%start_pStatement -> Statement .                    (rule 6)

	%eof           accept


State 37

	Statement -> 'for' . Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'    (rule 33)

	L_Ident        shift, and enter state 15

	Ident          goto state 67

State 38

	Statement -> 'if' . Expr ':' '{' ListDecl '}'       (rule 34)
	Statement -> 'if' . Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'    (rule 35)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 66

State 39

	Statement -> 'while' . '(' Expr ')' ':' '{' ListDecl '}'    (rule 32)

	'('            shift, and enter state 65


State 40

	Decl -> RoutineDecl .                               (rule 29)

	';'            reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 41

	%start_pDecl -> Decl .                              (rule 5)

	%eof           accept


State 42

	Decl -> Statement .                                 (rule 28)

	';'            reduce using rule 28
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 43

	RoutineDecl -> 'def' . Ident '(' ListIdent ')' ':' '{' ListDecl '}'    (rule 26)

	L_Ident        shift, and enter state 15

	Ident          goto state 64

State 44

	Decl -> 'return' . Expr                             (rule 27)

	'('            shift, and enter state 25
	'-'            shift, and enter state 26
	'not'          shift, and enter state 27
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 63

State 45

	%start_pRoutineDecl -> RoutineDecl .                (rule 4)

	%eof           accept


State 46

	ListIdent -> Ident .                                (rule 24)
	ListIdent -> Ident . ',' ListIdent                  (rule 25)

	')'            reduce using rule 24
	','            shift, and enter state 62
	%eof           reduce using rule 24


State 47

	%start_pListIdent -> ListIdent .                    (rule 3)

	%eof           accept


State 48

	%start_pListExpr -> ListExpr .                      (rule 2)

	%eof           accept


State 49

	ListExpr -> Expr .                                  (rule 21)
	ListExpr -> Expr . ',' ListExpr                     (rule 22)
	Expr -> Expr . '<' Expr1                            (rule 55)
	Expr -> Expr . '>' Expr1                            (rule 56)
	Expr -> Expr . '<=' Expr1                           (rule 57)
	Expr -> Expr . '>=' Expr1                           (rule 58)
	Expr -> Expr . '==' Expr1                           (rule 59)
	Expr -> Expr . '!=' Expr1                           (rule 60)

	'!='           shift, and enter state 55
	')'            reduce using rule 21
	','            shift, and enter state 56
	'<'            shift, and enter state 57
	'<='           shift, and enter state 58
	'=='           shift, and enter state 59
	'>'            shift, and enter state 60
	'>='           shift, and enter state 61
	%eof           reduce using rule 21


State 50

	%start_pListDecl -> ListDecl .                      (rule 1)

	%eof           accept


State 51

	ListDecl -> Decl .                                  (rule 18)
	ListDecl -> Decl . ';' ListDecl                     (rule 19)

	';'            shift, and enter state 54
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 52

	%start_pAst -> Ast .                                (rule 0)

	%eof           accept


State 53

	Ast -> ListDecl .                                   (rule 16)

	%eof           reduce using rule 16


State 54

	ListDecl -> Decl ';' . ListDecl                     (rule 19)
